# aws-hackathon

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
MCP Servers/: erp_mcp_server.py
agentcore-samples/: agent.py  deploy_mcp_server.py  deploy_travel_agent.py  mcp_client.py  mcp_server.py  mcp_server_requirements.txt  requirements.txt  test_mcp_server.py  test_travel_agent.py  travel_agent.py  travel_agentcore.py
agents/: anomaly_root_cause_agent.py  maintenance_planner_agent.py  management_agent.py  orchestrator_agent.py
frontend/: dev.bat  start_server.bat
frontend/src/: index.html
frontend/src/js/: app.js  state.js
frontend/src/js/components/: Dashboard.js  NewOrder.js  OrderDetails.js  OrdersList.js
frontend/src/js/services/: api.js
manufacturing-data/cmms/: maintenance_data.json
manufacturing-data/erp/: business_data.json
manufacturing-data/mes/: production_data.json
manufacturing-data/shared/: factory_model.json
manufacturing-data/sop/: emergency-procurement-sop.md
manufacturing-data/wpms/: workforce_data.json
mcp_servers/servers/: README.md  cmms_mcp_server.py  erp_mcp_server.py  json_data_loader.py  logistic_mcp_server.py  mes_mcp_server.py  sop_data_loader.py  sop_mcp_server.py  start_all_servers.py  wpms_mcp_server.py
mvp_mcp_servers/: erp_mcp_server.py
mvp_mcp_servers/erp/: business_data.json
schemas/: frontend_get_order.json  frontend_schedule_order.json
